{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 164,
  "lineage": "912c9703-d03d-db79-d279-4dd6f5a04544",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:477886836737:security-group/sg-078ee43d209673c3c",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-078ee43d209673c3c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "default",
            "owner_id": "477886836737",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0e88af37e97a01c86"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db-manager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04505e74c0741db8d",
            "arn": "arn:aws:ec2:us-east-1:477886836737:instance/i-0b3613d1cc1664729",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b3613d1cc1664729",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "webserver-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c39cd0e39e66f352",
            "private_dns": "ip-10-0-1-43.ec2.internal",
            "private_ip": "10.0.1.43",
            "public_dns": "ec2-44-199-232-130.compute-1.amazonaws.com",
            "public_ip": "44.199.232.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-002871a3aa6616312",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0750d0419f456cb9d",
            "tags": {
              "Name": "db-manager"
            },
            "tags_all": {
              "Name": "db-manager"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-078ee43d209673c3c"
            ]
          },
          "dependencies": [
            "aws_default_security_group.default",
            "aws_key_pair.webserver-key",
            "aws_subnet.prod-public-subnet-1",
            "aws_vpc.prod-vpc",
            "tls_private_key.webserver-private-key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db-node1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04505e74c0741db8d",
            "arn": "arn:aws:ec2:us-east-1:477886836737:instance/i-09a0b0df1502ab0b6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09a0b0df1502ab0b6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "webserver-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d568162abb377e21",
            "private_dns": "ip-10-0-1-54.ec2.internal",
            "private_ip": "10.0.1.54",
            "public_dns": "ec2-3-218-250-232.compute-1.amazonaws.com",
            "public_ip": "3.218.250.232",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-030134908c79c522b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0750d0419f456cb9d",
            "tags": {
              "Name": "db-node1"
            },
            "tags_all": {
              "Name": "db-node1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-078ee43d209673c3c"
            ]
          },
          "dependencies": [
            "aws_default_security_group.default",
            "aws_key_pair.webserver-key",
            "aws_subnet.prod-public-subnet-1",
            "aws_vpc.prod-vpc",
            "tls_private_key.webserver-private-key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db-node2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04505e74c0741db8d",
            "arn": "arn:aws:ec2:us-east-1:477886836737:instance/i-0265aabfae9ee7328",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0265aabfae9ee7328",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "webserver-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07172018cec94d287",
            "private_dns": "ip-10-0-2-55.ec2.internal",
            "private_ip": "10.0.2.55",
            "public_dns": "ec2-52-207-235-194.compute-1.amazonaws.com",
            "public_ip": "52.207.235.194",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b86b4cdfe258f3bb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cf1654baaf5401f0",
            "tags": {
              "Name": "db-node2"
            },
            "tags_all": {
              "Name": "db-node2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-078ee43d209673c3c"
            ]
          },
          "dependencies": [
            "aws_default_security_group.default",
            "aws_key_pair.webserver-key",
            "aws_subnet.prod-public-subnet-2",
            "aws_vpc.prod-vpc",
            "tls_private_key.webserver-private-key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:477886836737:internet-gateway/igw-038900be523f48cd1",
            "id": "igw-038900be523f48cd1",
            "owner_id": "477886836737",
            "tags": {
              "Name": "prod-igw"
            },
            "tags_all": {
              "Name": "prod-igw"
            },
            "vpc_id": "vpc-0e88af37e97a01c86"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-public-crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:477886836737:route-table/rtb-0d1538318a8ced31b",
            "id": "rtb-0d1538318a8ced31b",
            "owner_id": "477886836737",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-038900be523f48cd1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-public-crt"
            },
            "tags_all": {
              "Name": "prod-public-crt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e88af37e97a01c86"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod-crta-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0734039486350ea5f",
            "route_table_id": "rtb-0d1538318a8ced31b",
            "subnet_id": "subnet-0750d0419f456cb9d"
          },
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_route_table.prod-public-crt",
            "aws_subnet.prod-public-subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod-crta-public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bbe85859619f260c",
            "route_table_id": "rtb-0d1538318a8ced31b",
            "subnet_id": "subnet-0cf1654baaf5401f0"
          },
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_route_table.prod-public-crt",
            "aws_subnet.prod-public-subnet-2",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:477886836737:security-group/sg-084865308aa670f6f",
            "description": "Allow HTTP traffic to instances through Elastic Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-084865308aa670f6f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb-http",
            "name_prefix": "",
            "owner_id": "477886836737",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow HTTP through ELB Security Group"
            },
            "tags_all": {
              "Name": "Allow HTTP through ELB Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e88af37e97a01c86"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http-allowed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:477886836737:security-group/sg-0291029894de9def7",
            "description": "Allow HTTP inbound connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0291029894de9def7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "477886836737",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "http-allowed"
            },
            "tags_all": {
              "Name": "http-allowed"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e88af37e97a01c86"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-allowed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:477886836737:security-group/sg-0b8491df253621e61",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b8491df253621e61",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220105095121877600000003",
            "name_prefix": "terraform-",
            "owner_id": "477886836737",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-allowed"
            },
            "tags_all": {
              "Name": "ssh-allowed"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e88af37e97a01c86"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:477886836737:subnet/subnet-0750d0419f456cb9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0750d0419f456cb9d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "477886836737",
            "tags": {
              "Name": "prod-public-subnet-1"
            },
            "tags_all": {
              "Name": "prod-public-subnet-1"
            },
            "vpc_id": "vpc-0e88af37e97a01c86"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:477886836737:subnet/subnet-0cf1654baaf5401f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0cf1654baaf5401f0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "477886836737",
            "tags": {
              "Name": "prod-public-subnet-2"
            },
            "tags_all": {
              "Name": "prod-public-subnet-2"
            },
            "vpc_id": "vpc-0e88af37e97a01c86"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:477886836737:vpc/vpc-0e88af37e97a01c86",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-026e35f8ba4e223ce",
            "default_route_table_id": "rtb-009137001d9f15d80",
            "default_security_group_id": "sg-078ee43d209673c3c",
            "dhcp_options_id": "dopt-07d3ba8e6f195cef6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e88af37e97a01c86",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-009137001d9f15d80",
            "owner_id": "477886836737",
            "tags": {
              "Name": "prod-vpc"
            },
            "tags_all": {
              "Name": "prod-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb-back",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:477886836737:loadbalancer/app/elb-back/afeaa59efa460b68",
            "arn_suffix": "app/elb-back/afeaa59efa460b68",
            "desync_mitigation_mode": "defensive",
            "dns_name": "elb-back-1922001744.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:477886836737:loadbalancer/app/elb-back/afeaa59efa460b68",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "elb-back",
            "security_groups": [
              "sg-0291029894de9def7",
              "sg-0b8491df253621e61"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0750d0419f456cb9d"
              },
              {
                "subnet_id": "subnet-0cf1654baaf5401f0"
              }
            ],
            "subnets": [
              "subnet-0750d0419f456cb9d",
              "subnet-0cf1654baaf5401f0"
            ],
            "tags": {
              "Name": "elb-back"
            },
            "tags_all": {
              "Name": "elb-back"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-0e88af37e97a01c86",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.http-allowed",
            "aws_security_group.ssh-allowed",
            "aws_subnet.prod-public-subnet-1",
            "aws_subnet.prod-public-subnet-2",
            "aws_vpc.prod-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb-back",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:477886836737:listener/app/elb-back/afeaa59efa460b68/c664cc6c27d6eef6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:477886836737:targetgroup/pref-20220105095121858500000002/cbc55e028858cae4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:477886836737:listener/app/elb-back/afeaa59efa460b68/c664cc6c27d6eef6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:477886836737:loadbalancer/app/elb-back/afeaa59efa460b68",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.http-allowed",
            "aws_security_group.ssh-allowed",
            "aws_subnet.prod-public-subnet-1",
            "aws_subnet.prod-public-subnet-2",
            "aws_vpc.prod-vpc",
            "module.alb-back.aws_lb.this",
            "module.alb-back.aws_lb_target_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb-back",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:477886836737:targetgroup/pref-20220105095121858500000002/cbc55e028858cae4",
            "arn_suffix": "targetgroup/pref-20220105095121858500000002/cbc55e028858cae4",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:477886836737:targetgroup/pref-20220105095121858500000002/cbc55e028858cae4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "pref-20220105095121858500000002",
            "name_prefix": "pref-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "pref-"
            },
            "tags_all": {
              "Name": "pref-"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0e88af37e97a01c86"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb-front",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:477886836737:loadbalancer/app/elb-front/75cb19f1cbb9a475",
            "arn_suffix": "app/elb-front/75cb19f1cbb9a475",
            "desync_mitigation_mode": "defensive",
            "dns_name": "elb-front-1957883101.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:477886836737:loadbalancer/app/elb-front/75cb19f1cbb9a475",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "elb-front",
            "security_groups": [
              "sg-0291029894de9def7",
              "sg-0b8491df253621e61"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0750d0419f456cb9d"
              },
              {
                "subnet_id": "subnet-0cf1654baaf5401f0"
              }
            ],
            "subnets": [
              "subnet-0750d0419f456cb9d",
              "subnet-0cf1654baaf5401f0"
            ],
            "tags": {
              "Name": "elb-front"
            },
            "tags_all": {
              "Name": "elb-front"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-0e88af37e97a01c86",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.http-allowed",
            "aws_security_group.ssh-allowed",
            "aws_subnet.prod-public-subnet-1",
            "aws_subnet.prod-public-subnet-2",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb-front",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:477886836737:listener/app/elb-front/75cb19f1cbb9a475/51866fe00520b928",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:477886836737:targetgroup/pref-20220105095121848600000001/82324b4b5f064818",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:477886836737:listener/app/elb-front/75cb19f1cbb9a475/51866fe00520b928",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:477886836737:loadbalancer/app/elb-front/75cb19f1cbb9a475",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.http-allowed",
            "aws_security_group.ssh-allowed",
            "aws_subnet.prod-public-subnet-1",
            "aws_subnet.prod-public-subnet-2",
            "aws_vpc.prod-vpc",
            "module.alb-front.aws_lb.this",
            "module.alb-front.aws_lb_target_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb-front",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:477886836737:targetgroup/pref-20220105095121848600000001/82324b4b5f064818",
            "arn_suffix": "targetgroup/pref-20220105095121848600000001/82324b4b5f064818",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:477886836737:targetgroup/pref-20220105095121848600000001/82324b4b5f064818",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "pref-20220105095121848600000001",
            "name_prefix": "pref-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "pref-"
            },
            "tags_all": {
              "Name": "pref-"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0e88af37e97a01c86"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}